@@ -30,7 +30,8 @@ Post-v2.5.0
      * Sensible defaults have been introduced for many of the required
        configuration options
      * DB entries have been added for many of the DPDK EAL command line
-       arguments
+       arguments. Additional arguments can be passed via the dpdk-extra
+       entry.
    - ovs-benchmark: This utility has been removed due to lack of use and
      bitrot.
    - ovs-appctl:
